Ensure scrollbars never show up when the menus open off screen

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+body {
+    overflow: hidden;
+}
 div#canvasWrapper, canvas#paint{
     position: absolute;
     top: 0;
